--- a/css/navcss/component.css
+++ b/css/navcss/component.css
@@ -10,7 +10,7 @@
 	display: flex;
 	-webkit-flex-wrap: wrap;
 	flex-wrap: wrap;
-	margin: 0;
+	margin: 0 auto;
 	padding: 0;
 	list-style: none;
 }
@@ -24,7 +24,7 @@
 	font-size: 1.05em;
 	font-weight: bold;
 	display: block;
-	padding: 1em;
+/*	padding: 1em;*/
 	cursor: pointer;
 	-webkit-user-select: none;
 	-moz-user-select: none;
