--- a/css/navcss/component.css
+++ b/css/navcss/component.css
@@ -1454,7 +1454,7 @@
 
 /* Valentine */
 .menu--valentine .menu__item {
-	position: relative;
+	position: sticky;
 	margin: 0 1em;
 }
 
@@ -1519,7 +1519,7 @@
 .menu--valentine .menu__link::after {
 	left: 0;
 	width: 100%;
-	height: 2px;
+	height: 0.14em;
 	-webkit-transform: scale3d(0, 1, 1);
 	transform: scale3d(0, 1, 1);
 }
