--- a/css/portfoliocss/component.css
+++ b/css/portfoliocss/component.css
@@ -1,3 +1,4 @@
+/*
 .grid {
 	padding: 20px 20px 100px 20px;
 	max-width: 1300px;
@@ -53,6 +54,7 @@
 	background: #ed4e6e;
 	color: #fff;
 }
+*/
 
 /* Individual Caption Styles */
 
