--- a/css/shapecss/component.css
+++ b/css/shapecss/component.css
@@ -1,54 +1,21 @@
-
-/*========================navigation=================*/
-
-#Valentine{
-    text-align: center;
-    background-image: url(/img/head.jpg);
-}
-
-#Valentine h2{
-    
-    color:black;
-    font-size: 3em;
-    text-align: center;
-}
-
-#Valentine nav ul{
-    margin: 0 auto;
-    text-align: center;
-    font-size: 1.2em;
-}
-
-#navi {
-    margin: 0 auto;
-    text-align: center;
-}
-/*=================navigation end=================*/
-
-
-/*------------
-
-----portfolio slider-------------------*/
-/*
-#port {
-    background-image: url(/images/cofee.jpg);
-}
+/* Common style */
 .grid {
-    margin: 40px auto 120px;
-    max-width: 1000px;
-    width: 90%;
-}
-.grid a {
-    
-    float:left;
-    max-width: 250px;
-    width: 25%;
-    color: #333;
+	margin: 40px auto 120px;
+	max-width: 1000px;
+	width: 90%;
 }
 
-.grid a:nth-child(odd){
-    margin: 30px 0 -30px 0;
+.grid a {
+	float: left;
+	max-width: 250px;
+	width: 25%;
+	color: #333;
 }
+
+.grid a:nth-child(odd) {
+	margin: 30px 0 -30px 0;
+}
+
 .grid figure {
 	position: relative;
 	overflow: hidden;
@@ -60,8 +27,8 @@
 	position: relative;
 	display: block;
 	width: 100%;
-    height: 20em;
 	opacity: 0.7;
+	-webkit-transition: opacity 0.3s;
 	transition: opacity 0.3s;
 }
 
@@ -74,6 +41,7 @@
 	height: 100%;
 	text-align: center;
 }
+
 .grid figcaption h2 {
 	margin: 0 0 20px 0;
 	color: #3498db;
@@ -81,6 +49,7 @@
 	letter-spacing: 1px;
 	font-weight: 300;
 	font-size: 130%;
+	-webkit-transition: -webkit-transform 0.3s;
 	transition: transform 0.3s;
 }
 
@@ -88,22 +57,24 @@
 	padding: 0 20px;
 	color: #aaa;
 	font-weight: 300;
+	-webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
 	transition: opacity 0.3s, transform 0.3s;
 }
 
 .grid figcaption h2,
 .grid figcaption p {
+	-webkit-transform: translateY(50px);
 	transform: translateY(50px);
 }
 
 .grid figure button {
 	position: absolute;
-    color: aqua;
 	padding: 4px 20px;
 	border: none;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	font-weight: bold;
+	-webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
 	transition: opacity 0.3s, transform 0.3s;
 }
 
@@ -111,12 +82,14 @@
 .grid figcaption h2,
 .grid figcaption p,
 .grid figure button {
+	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 }
 
+/* Style for SVG */
 .grid svg {
 	position: absolute;
-	top: -1px;  fixes rendering issue in FF 
+	top: -1px; /* fixes rendering issue in FF */
 	z-index: 10;
 	width: 100%;
 	height: 100%;
@@ -126,12 +99,14 @@
 	fill: #fff;
 }
 
+/* Hover effects */
 .grid a:hover figure img {
 	opacity: 1;
 }
 
 .grid a:hover figcaption h2,
 .grid a:hover figcaption p {
+	-webkit-transform: translateY(0);
 	transform: translateY(0);
 }
 
@@ -139,12 +114,43 @@
 	opacity: 0;
 }
 
+/* Individual styles */
+.demo-1 body {
+	background: #3498db;
+}
+
+.demo-1 .grid figure button,
+.demo-3 .grid figure button {
+	top: 50%;
+	left: 50%;
+	border: 3px solid #fff;
+	background: transparent;
+	color: #fff;
+	opacity: 0;
+	-webkit-transform: translateY(-50%) translateX(-50%) scale(0.25);
+	transform: translateY(-50%) translateX(-50%) scale(0.25);
+}
+
+.demo-1 .grid a:hover figure button,
+.demo-3 .grid a:hover figure button {
+	opacity: 1;
+	-webkit-transform: translateY(-50%) translateX(-50%) scale(1);
+	transform: translateY(-50%) translateX(-50%) scale(1);
+}
+
+.demo-2 body {
+	background: #e74c3c;
+}
+
+.demo-2 .grid figcaption h2 {
+	color: #e74c3c;
+}
+
 .demo-2 .grid figcaption p {
+	-webkit-transition-delay: 0.05s;
 	transition-delay: 0.05s;
 }
-*/
 
-/*
 .demo-2 .grid figure button {
 	bottom: 0;
 	left: 0;
@@ -153,11 +159,14 @@
 	background: #fff;
 	color: #333;
 	font-weight: 300;
+	-webkit-transform: translateY(100%);
 	transform: translateY(100%);
 }
 
 .demo-2 .grid a:hover figure button {
+	-webkit-transition-timing-function: ease-out;
 	transition-timing-function: ease-out;
+	-webkit-transform: translateY(0);
 	transform: translateY(0);
 }
 
@@ -165,15 +174,34 @@
 .demo-2 .grid figcaption p,
 .demo-3 .grid figcaption h2,
 .demo-3 .grid figcaption p {
+	-webkit-transition-timing-function: cubic-bezier(0.250, 0.250, 0.115, 1); /* older webkit */
+	-webkit-transition-timing-function: cubic-bezier(0.250, 0.250, 0.115, 1.445);
 	timing-function: cubic-bezier(0.250, 0.250, 0.115, 1.445);
 }
 
 .demo-2 .grid a:hover figcaption p,
 .demo-3 .grid a:hover figcaption p {
+	-webkit-transition-delay: 0s;
 	transition-delay: 0s;
+	-webkit-transition-duration: 0.1s;
 	transition-duration: 0.1s;
 }
 
+.demo-3 body {
+	background: #52be7f;
+}
+
+.demo-3 .grid figcaption h2 {
+	color: #52be7f;
+}
+
+.demo-3 .grid a:hover figcaption h2 {
+	-webkit-transform: translateY(5px);
+	transform: translateY(5px);
+}
+
+/* Media Queries */
+/* Let's redefine the width of each anchor and the margins */
 
 @media screen and (max-width: 58em) {
 	.grid a {
@@ -209,6 +237,7 @@
 
 	.grid figcaption h2 {
 		margin-bottom: 0px;
+		-webkit-transform: translateY(30px);
 		transform: translateY(30px);
 	}
 
@@ -231,5 +260,3 @@
 		margin: 0;
 	}
 }
-*/
-/*-----------------portfolio slider end-------------------*/
