added new slider

--- a/css/app.css
+++ b/css/app.css
@@ -1,10 +1,12 @@
 
 /*========================navigation=================*/
 
+/*
 #Valentine{
     text-align: center;
     background-image: url(/img/head.jpg);
 }
+*/
 
 #Valentine h2{
     
