--- a/css/landing.css
+++ b/css/landing.css
@@ -1,99 +1,98 @@
-.slider{
-    
-    height:auto;
-display: inline-block;
+.slider {
+    padding: 0;
+    margin: 0 auto;
+    height: auto;
+    display: inline-block;
     width: 100%;
 }
-
-.content {
+.content p{
     color: white;
-   
+    
     
 }
-
-
 #landing,
 #landing *,
-#landing :before,
-#landing :after {
-  position: relative;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  vertical-align: middle;
-  text-overflow: ellipsis;
-  font-family: Montserrat, Arial, Helvetica, Tahoma, Verdana, sans-serif;
+#landing:before,
+#landing:after {
+    position: relative;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    vertical-align: middle;
+    text-overflow: ellipsis;
+    font-family: Montserrat, Arial, Helvetica, Tahoma, Verdana, sans-serif;
 }
 #landing {
-/*  width: 1500px;*/
+    /*  width: 1500px;*/
     height: auto;
-  font-size: 16px;
-  padding-top: 4.0625em;
-/*background: #fff;*/
-  text-align: center;
+    font-size: 16px;
+    padding-top: 4.0625em;
+    /*background: #fff;*/
+    text-align: center;
 }
 #landing {
-  font-size: 1.061vw;
-  width: auto;
+    font-size: 1.061vw;
+    width: auto;
 }
 #landing > * {
-  text-align: left;
+    text-align: left;
 }
 #landing .button {
-  display: inline-block;
-  padding: .75em 1.4em;
-  border-radius: 2em;
-  font-weight: bold;
-  line-height: normal;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
-  background-color: #99ce45;
-  border: .125em solid #99ce45;
-  color: #fff;
-  transition: background 0.4s, color 0.4s, border-color 0.4s;
+    display: inline-block;
+    padding: .75em 1.4em;
+    border-radius: 2em;
+    font-weight: bold;
+    line-height: normal;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    background-color: #99ce45;
+    border: .125em solid #99ce45;
+    color: #fff;
+    transition: background 0.4s, color 0.4s, border-color 0.4s;
 }
 #landing .button:hover {
-  background: transparent;
-  color: #99ce45;
+    background: transparent;
+    color: #99ce45;
 }
 #landing .button:active {
-  opacity: .5;
+    opacity: .5;
 }
 #landing .button-blue {
-  background: #01b0fe;
-  border-color: #01b0fe;
+    background: #01b0fe;
+    border-color: #01b0fe;
 }
 #landing .button-blue:hover {
-  background: transparent;
-  color: #01b0fe;
+    background: transparent;
+    color: #01b0fe;
 }
 #landing .button-orange {
-  background: #fe8f4f;
-  border-color: #fe8f4f;
+    background: #fe8f4f;
+    border-color: #fe8f4f;
 }
 #landing .button-orange:hover {
-  background: transparent;
-  color: #fe8f4f;
+    background: transparent;
+    color: #fe8f4f;
 }
 #landing > .header {
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  height: 4.0625em;
-  z-index: 100;
-  background: rgba(255, 255, 255, 0.9);
-  padding: .9em 1.25em;
-  line-height: 2em;
-  text-align: right;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  word-spacing: 2.5em;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    height: 4.0625em;
+    z-index: 100;
+    background: rgba(255, 255, 255, 0.9);
+    padding: .9em 1.25em;
+    line-height: 2em;
+    text-align: right;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    word-spacing: 2.5em;
 }
 #landing > .header > * {
-  display: inline-block;
-  word-spacing: normal;
+    display: inline-block;
+    word-spacing: normal;
 }
+
 /*
 #landing > .header > .logo {
   display: inline-block;
@@ -109,10 +108,12 @@ display: inline-block;
   background-size: contain;
 }
 */
+
 #landing > .header > .button {
-  font-size: .75em;
-  border-width: .18em;
+    font-size: .75em;
+    border-width: .18em;
 }
+
 /*
 #landing > .header > .login {
   font-size: .875em;
@@ -322,99 +323,100 @@ display: inline-block;
   -moz-osx-font-smoothing: grayscale;
 }
 */
+
 #landing .slider {
-  position: relative;
-  overflow: hidden;
-  text-align: center;
+    position: relative;
+    overflow: hidden;
+    text-align: center;
 }
 #landing .slider .content {
-  text-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
+    text-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
 }
 #landing .slider > img.ratio {
-  display: inline-block;
-  position: relative;
-  box-sizing: border-box;
-  width: 100%;
-  border: 0 none;
-  outline: 0 none;
-  margin: 0;
-  /* data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAEALAAAAAABAAEAAAIBTAA7 */
+    display: inline-block;
+    position: relative;
+    box-sizing: border-box;
+    width: 100%;
+    border: 0 none;
+    outline: 0 none;
+    margin: 0;
+    /* data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAEALAAAAAABAAEAAAIBTAA7 */
 }
 #landing .slider > input.slide {
-  position: absolute;
-  width: 0;
-  height: 0;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  opacity: 0;
-  overflow: hidden;
+    position: absolute;
+    width: 0;
+    height: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    opacity: 0;
+    overflow: hidden;
 }
 #landing .slider > input.slide + label {
-  display: inline-block;
-  width: 3.32em;
-  height: 3.125em;
-  margin-top: -3.125em;
-  padding: 1.5em .25em 0;
-  top: -0.5em;
-  cursor: pointer;
-  z-index: 100;
+    display: inline-block;
+    width: 3.32em;
+    height: 3.125em;
+    margin-top: -3.125em;
+    padding: 1.5em .25em 0;
+    top: -0.5em;
+    cursor: pointer;
+    z-index: 100;
 }
 #landing .slider > input.slide + label:before {
-  content: "";
-  display: block;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  transition: border-color 0.2s;
+    content: "";
+    display: block;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    transition: border-color 0.2s;
 }
 #landing .slider > input.slide + label:hover:before {
-  border-color: rgba(255, 255, 255, 0.4);
+    border-color: rgba(255, 255, 255, 0.4);
 }
 #landing .slider > input.slide:checked + label:before {
-  border-color: #ffffff;
+    border-color: #ffffff;
 }
 #landing .slider > input.slide + label + div,
 #landing .slider > input.slide + label + div > img:first-child,
 #landing .slider > input.slide + label + div > img:first-child + div {
-  position: absolute;
-  z-index: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  text-align: left;
-  overflow: hidden;
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    text-align: left;
+    overflow: hidden;
 }
 #landing .slider > input.slide + label + div > img:first-child {
-  width: 100%;
-  height: 100%;
-  opacity: .9;
+    width: 100%;
+    height: 100%;
+    opacity: .9;
 }
 #landing .slider > input.slide + label + div {
-  transition: opacity 1s, transform 1.5s;
-  opacity: 0;
-  transform: scale(1.5);
-  background: rgba(0, 0, 0, 0.8);
+    transition: opacity 1s, transform 1.5s;
+    opacity: 0;
+    transform: scale(1.5);
+    background: rgba(0, 0, 0, 0.8);
 }
 #landing .slider > input.slide:checked + label + div {
-  z-index: 50;
-  opacity: 1;
-  transform: scale(1);
+    z-index: 50;
+    opacity: 1;
+    transform: scale(1);
 }
 #landing .slider > input.slide + label + div:before {
-  content: "";
-  display: block;
-  position: absolute;
-  bottom: 1px;
-  left: 0;
-  width: 0;
-  opacity: 0;
-  z-index: 100;
-  background: #0097db;
-  height: 2px;
-  transition: width 6.8s linear, opacity 3s 1s linear;
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 1px;
+    left: 0;
+    width: 0;
+    opacity: 0;
+    z-index: 100;
+    background: #0097db;
+    height: 2px;
+    transition: width 6.8s linear, opacity 3s 1s linear;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
 }
 #landing .slider > input.slide:checked + label + div:before {
-  width: 100%;
-  opacity: 1;
+    width: 100%;
+    opacity: 1;
 }
