--- a/css/app.css
+++ b/css/app.css
@@ -23,6 +23,7 @@
 }
 
 #Valentine nav ul{
+    z-index: 1000;
     margin: 0 auto;
     text-align: center;
     font-size: 1.2em;
@@ -39,9 +40,21 @@
 
 ----portfolio slider-------------------*/
 
+.slider-image{
+
+width: 100%;
+height: 500px;
+
+}
+
+.cb-slideshow li{
+    list-style: none;
+}
+
 .cb-slideshow,
 .cb-slideshow:after { 
-    position: fixed;
+    position:fixed;
+    background-size:cover;
     width: 100%;
     height: 100%;
     top: 0px;
@@ -93,10 +106,10 @@
     line-height: 200px; 
 }
 .cb-slideshow li:nth-child(1) span { 
-    background-image: url(../images/1.jpg) 
+    background-image: url(../img/1.jpg) 
 }
 .cb-slideshow li:nth-child(2) span { 
-    background-image: url(../images/2.jpg);
+    background-image: url(../img/2.jpg);
     -webkit-animation-delay: 6s;
     -moz-animation-delay: 6s;
     -o-animation-delay: 6s;
@@ -104,7 +117,7 @@
     animation-delay: 6s; 
 }
 .cb-slideshow li:nth-child(3) span { 
-    background-image: url(../images/3.jpg);
+    background-image: url(../img/3.jpg);
     -webkit-animation-delay: 12s;
     -moz-animation-delay: 12s;
     -o-animation-delay: 12s;
@@ -112,7 +125,7 @@
     animation-delay: 12s; 
 }
 .cb-slideshow li:nth-child(4) span { 
-    background-image: url(../images/4.jpg);
+    background-image: url(../img/4.jpg);
     -webkit-animation-delay: 18s;
     -moz-animation-delay: 18s;
     -o-animation-delay: 18s;
@@ -120,7 +133,7 @@
     animation-delay: 18s; 
 }
 .cb-slideshow li:nth-child(5) span { 
-    background-image: url(../images/5.jpg);
+    background-image: url(../img/5.jpg);
     -webkit-animation-delay: 24s;
     -moz-animation-delay: 24s;
     -o-animation-delay: 24s;
@@ -128,7 +141,7 @@
     animation-delay: 24s; 
 }
 .cb-slideshow li:nth-child(6) span { 
-    background-image: url(../images/6.jpg);
+    background-image: url(../img/6.jpg);
     -webkit-animation-delay: 30s;
     -moz-animation-delay: 30s;
     -o-animation-delay: 30s;
