--- a/css/portfoliocss/component.css
+++ b/css/portfoliocss/component.css
@@ -7,11 +7,17 @@
 	text-align: center;
 }
 
+.portfolio li{
+	padding: 2px;
+	margin: 0 auto;
+	width: 100%;
+}
+
 .portfolio li {
 	display: inline-block;
 	width: 440px;
 	margin: 0;
-	padding: 20px;
+	padding: 2px;
 	text-align: left;
 	position: relative;
 }
