--- a/css/app.css
+++ b/css/app.css
@@ -410,7 +410,7 @@ position: relative;
     z-index: -1;
     width: 100%;
     height: 4px;
-    background: #6a7989;
+    background: grey;
     -webkit-transition: -webkit-transform 0.3s;
     transition: transform 0.3s;
 }
