--- a/css/app.css
+++ b/css/app.css
@@ -293,6 +293,12 @@ position: relative;
 
 }
 /*-----------------portfolio section-------------------*/
+
+.portfolio{
+    background: rgba(0,0,0,0.9);
+    position: relative;
+}
+
 .portfolio li{
     padding: 0;
     margin: 0 auto;
@@ -304,7 +310,7 @@ position: relative;
 
 .content{
     position: relative;
-    background-color: rgba(0,0,0,8);
+    background-color: rgba(0,0,0,0.9);
 }
 
 
