--- a/css/portfoliocss/component.css
+++ b/css/portfoliocss/component.css
@@ -1,5 +1,5 @@
 .portfolio {
-    background-color: antiquewhite;
+    /*background-color: antiquewhite;*/
 	padding: 20px 20px 100px 20px;
 	max-width: 1300px;
 	margin: 0 auto;
