--- a/css/navcss/component.css
+++ b/css/navcss/component.css
@@ -1459,7 +1459,7 @@
 }
 
 .menu--valentine .menu__link {
-	position: relative;
+	position: va;
 	display: block;
 	min-width: 105px;
 	text-align: center;
