--- a/css/app.css
+++ b/css/app.css
@@ -304,7 +304,7 @@ hr {
 .footer{
 
    background-color: #000000;
-  color: #FCFCFC;
+  color: gold;
   text-align: center;
   font-size: 1em;
     
@@ -336,7 +336,7 @@ width:10%;
   border-radius: 50%;
   background: #191919;
     border: 2px solid #272727;
-  color: #fff;
+  color: gold;
 text-align: center;
 
 font-size: 1em;
